--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -67,3 +67,32 @@ button {
     text-decoration: none;
     transform: scale(0.95);
   }
+
+
+/* countdown id's are esablished in HTML and is used to make sure the coundown is set diplay into nothing until called upon in javascrpit.*/
+#countdownContainer{
+    display: none; /* used to make the container holding the text to dissapear until called upon in javascript.*/
+    width: 100%;
+    height: 250px;
+
+}
+
+#countdownText{
+    font-size: 110px;
+    color: red;
+}
+
+
+/* question id's are established in HTML and is used to pop up questions to user.*/
+#questionsContainer{
+    /*display: none; /* used to make the container holding the text to dissapear until called upon in javascript.*/
+    width: 100%;
+    height: 250px;
+    border: 10px solid blue;
+}
+
+#questionsText{
+
+    font-size: 80px;
+    color: green;
+}
