--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -22,6 +22,10 @@ header h1{
     font-weight: bolder;
     background-color: yellow;
 }
+
+header div{
+    background-color: yellow;
+}
 header p{
 
     flex-wrap: wrap;
@@ -31,6 +35,12 @@ header p{
     font-weight: bolder;
     background-color: yellow;
     text-decoration: underline;
+}
+header #quizText, #quizValue{
+    text-decoration: none;
+    font-size: 50px;
+    color: red;
+
 }
 section{
 
@@ -85,14 +95,23 @@ button {
 
 /* question id's are established in HTML and is used to pop up questions to user.*/
 #questionsContainer{
-    /*display: none; /* used to make the container holding the text to dissapear until called upon in javascript.*/
+
+    display: none; /* used to make the container holding the text to dissapear until called upon in javascript.*/
+    position: relative;
     width: 100%;
     height: 250px;
-    border: 10px solid blue;
 }
 
-#questionsText{
-
-    font-size: 80px;
+#questionElement{
+   
+    position: relative;
+    font-size: 50px;
     color: green;
+}
+
+#answerElement{
+
+    position: relative;
+    font-size: 25px;
+    color: white;
 }
