--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -104,14 +104,25 @@ button {
 
 #questionElement{
    
+    display: none;
+    width: 100%;
+    height: 250px;
     position: relative;
     font-size: 50px;
-    color: green;
+    color: red;
 }
 
 #answerElement{
 
+    display: none;
     position: relative;
-    font-size: 25px;
-    color: white;
+    
+
+}
+
+#endGame{
+
+    display: none;
+    position: relative;
+
 }
