--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -126,3 +126,19 @@ button {
     position: relative;
 
 }
+#formContainer{
+
+    display: none;
+    position: relative;
+    width: 100%;
+    height: 250px;
+}
+#formElement{
+
+    display: none;
+    width: 100%;
+    height: 250px;
+    position: relative;
+    font-size: 50px;
+    color: white;
+}
